# nlp-lite

./: CMakeLists.txt  LICENSE  README.md
nlp/analyser/: reader.cc  reader.hh  tokenizer.cc  tokenizer.hh  training_data_metrics.hh
nlp/apps/: classifier.cc
nlp/core/: thread_pool.hh  types.hh
nlp/core/lib/: thread_pool.hh
nlp/index/: heap.hh
nlp/network/: layer.hh  operator.hh  shape.hh  storage.hh  symbol.hh  symbol_binary_op.hh  variable.hh
nlp/network/operator/: op_dense_forward.cc  op_dense_forward.hh  op_dense_sparse_forward.hh
nlp/network/storage/: storage_dense.hh  storage_dense_variable.hh  storage_sparse_variable.hh  storage_variable.hh
nlp/prototype/: CMakeLists.txt  activation.hh  dense.hh  io.cc  io.hh  layer.hh  loss.hh  matrix.hh  model.hh  optimizer.hh  prototype.cc  tfile  variable.hh
nlp/utility/: constant.hh  forward_declaration.hh  object_pool.hh  string.hh  types.hh
